<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Task_1" Id="{1b4acdbb-dead-4f52-ba94-f5c5c1cf4e46}">
    <Declaration><![CDATA[TYPE Task_1 :
	(
		NieuweOrderGaragist,
		VoorraadAdministratief,
		VerzamelingArtikelen,
		OrderGeanuleerd
	) := NieuweOrderGaragist;
END_TYPE

]]></Declaration>
  </DUT>
</TcPlcObject>